pkg/lang/syntax/testdata/ub/validate/invalid/factory/state-moves-slash-path.ub
factory: {
  state-moves: [
    { from: resource.old, to: resource.child/resource.new }
  ]
}
